--- a/_posts/2017-10-01-wood-quay.md
+++ b/_posts/2017-10-01-wood-quay.md
@@ -5,6 +5,7 @@ permalink: /wood-quay
 date: 2017-10-01 12:00:00
 category: events
 tags: Grayscale 'Wood Quay' 'R. Kitt' 'Damo Lynch' "Dillon O'Sullivan" 'Kev Freeney'
+featured_image: assets/images/gswq.jpg
 ---
 
 **Audio:** Damo Lynch, R. Kitt <br />
