--- a/_posts/2017-11-01-tbgs.md
+++ b/_posts/2017-11-01-tbgs.md
@@ -5,6 +5,7 @@ permalink: /the-waters-will-rise-slowly
 date: 2017-11-01 12:00:00
 category: events
 tags: Dreamcycles Lumigraph 'Lilian Duthop' Slipdraft 'Steve MacD' 'Tim Redfern' 'Breffni McGeough' 'Lewis Byrne' 'Kev Freeney' 'Richie Allendon' 'Whiplash' 'Gallery Weekend' 'Temple Bar Gallery & Studios'
+featured_image: assets/images/tbgs.jpg
 ---
 
 **Saturday, November 25th, 2017, 10pm**
